<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E2F8"
    android:padding="20dp"
    tools:context=".ui.TaskDetailFragment">

    <View
        android:id="@+id/task_priority_view"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="#FF0000"
        app:layout_constraintEnd_toStartOf="@id/task_title"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/task_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:autofillHints="@null"
        android:ems="10"
        android:hint="@string/enter_task_title"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@id/task_priority_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/example_task" />

    <EditText
        android:id="@+id/task_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@null"
        android:ems="10"
        android:hint="@string/enter_task_detail"
        android:inputType="textMultiLine|textPersonName"
        android:maxLength="150"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/task_title"
        app:layout_constraintTop_toBottomOf="@id/task_title"
        tools:text="@string/example_task_detail" />

    <Spinner
        android:id="@+id/task_priority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:dropDownWidth="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/task_detail"
        app:layout_constraintTop_toBottomOf="@id/task_detail" />

    <TextView
        android:id="@+id/priority_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/task_priority" />

    <TextView
        android:id="@+id/status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priority_label" />

    <RadioGroup
        android:id="@+id/status_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:checkedButton="@id/status_open"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/status_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/status_label"
        app:layout_constraintTop_toTopOf="@id/status_label">

        <RadioButton
            android:id="@+id/status_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/open"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/status_closed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/closed"
            android:textSize="24sp" />

    </RadioGroup>

    <Button
        android:id="@+id/save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/save"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/delete_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_label" />

    <Button
        android:id="@+id/delete_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/delete"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/save_task"
        app:layout_constraintTop_toTopOf="@id/save_task" />

</androidx.constraintlayout.widget.ConstraintLayout>